feat: Implement user-friendly CLI argument parsing
- Replaced ConfigValidator with ConfigRetriever, streamlining configuration retrieval and validation.
- Corrected and simplified CLI usage and examples in README, and updated test metrics.
- Implemented annotation-driven CLI argument parsing with MainCommand.
- Improved Gradle build for self-contained jar creation with dependencies.
- Delegated sort strategy validation and filtering to MainCommand.call().
- BenchmarkRunner.run() now receives parameters directly, removing unnecessary indirection.